cmd/oracle-manager/k8s/01-oracle-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oracle-manager
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oracle-manager
  template:
    metadata:
      labels:
        app: oracle-manager
    spec:
      containers:
      - name: oracle-manager
        image: uhub.service.ucloud.cn/entropypool/oracle-manager:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: oracle-manager
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 50290
    targetPort: 50290
  - name: grpc
    port: 50291
    targetPort: 50291
  - name: prometheus
    port: 50292
    targetPort: 50292
  selector:
    app: oracle-manager
